feat: add invitedBy to user info page, closes #13972, closes #13997
